<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="346dp"
    android:background="@color/ev_unselected"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_delete_str"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btnYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_log_out_drw"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/yes_str"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_log_out_drw"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel_str"
        android:textColor="@color/white"
        android:textSize="22sp" />


</LinearLayout>