<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="346dp"
    android:background="@color/ev_unselected"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editNewTopic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:autofillHints="@string/change_text_str"
        android:hint="@string/change_text_str"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btnChangeYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_log_out_drw"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_ok_str"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/btnChangeCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_log_out_drw"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel_str"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>