<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/streamName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/header_color"
        android:drawablePadding="43dp"
        android:gravity="center_vertical"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:text="@string/stream_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@id/topicName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/component_color"
        android:gravity="center"
        android:text="@string/topic_name"
        android:textColor="@color/ev_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/recyclerMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/streamName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/messageBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicName"
        app:reverseLayout="true"
        tools:listitem="@layout/item_out_message" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/messageBox"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/component_color"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        app:constraint_referenced_ids="messageEdit,messageBtn"
        app:flow_horizontalGap="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerMessage" />

    <EditText
        android:id="@+id/messageEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/make_message_hint"
        android:background="@drawable/message_box_drw"
        android:fadeScrollbars="true"
        android:hint="@string/make_message_hint"
        android:inputType="textMultiLine"
        android:maxHeight="102dp"
        android:minHeight="51dp"
        android:paddingLeft="21dp"
        android:paddingRight="21dp"
        android:singleLine="false"
        android:textColor="@color/ev_text_color"
        android:textColorHint="@color/ev_text_color"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/messageBtn"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/message_button_drw"
        android:contentDescription="@string/error_str"
        android:src="@drawable/ic_add_message" />

</androidx.constraintlayout.widget.ConstraintLayout>